--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socketio-exercice",
+  "name": "chat-app",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -8,7 +8,7 @@
     "start": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gharbik",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
